--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/Mr-Mahabeer/react-native-ui-house/issues"
   },
-  "homepage": "https://github.com/Mr-Mahabeer/react-native-ui-house#readme"
+  "homepage": "https://github.com/Mr-Mahabeer/react-native-ui-house#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-native": "^0.72.5"
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^5.0.0"
+  }
 }
