--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-ui-house",
   "version": "1.0.2",
   "description": "Customizable and reusable components for your react native project.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
