paths issue fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "jsx": "react",
-    "paths": {
-      "@src/*": ["./src/*"]
-    }
+    "jsx": "react"
   }
 }
