fix(license): ISC to  MIT

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "components"
   ],
   "author": "Mr-Mahabeer",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Mr-Mahabeer/react-native-ui-house/issues"
   },
